Criando anotação para atributo

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 NotBlank={0}
 PositiveOrZero={0} precisa ser maior que zero
 NotNull=O campo {0} n\u00E3o pode ser nulo
+Multiplo={0} deve ser um valor múltiplo de {1}
 
 restaurante.nome=O nome do restaurante é obrigatório
 cozinha.nome=O nome da cozinha é obrigatório
